Fixed the display of accomodations card on mobile version, wrong width due to a main-style's setting.

--- a/assets/css/desktop-style.css
+++ b/assets/css/desktop-style.css
@@ -66,6 +66,10 @@ header nav ul li a:hover {
     margin-top: -12px;
 }
 
+.img-height {
+    max-width: 236px;
+}
+
 .accomodation_price {
     max-width: 12vw;
 }
