--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -442,7 +442,6 @@ header nav ul li a:focus {
 
 .img-height {
     height: 114px;
-    max-width: 236px;
 }
 
 .accomodation_stars {
