--- a/assets/css/mobile-style.css
+++ b/assets/css/mobile-style.css
@@ -196,7 +196,7 @@ header nav ul li a:focus {
 }
 
 .popular_picture {
-    width: 324px;
+    width: 334px;
 }
 
 .popular_picture img {
@@ -233,7 +233,7 @@ header nav ul li a:focus {
 }
 
 .accomodation_picture img {
-    width: 314px;
+    width: 326px;
 }
 
 .display_more {
